[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CheckButton" type="CheckButton" parent="."]
margin_right = 76.0
margin_bottom = 40.0
disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = -43.0
margin_right = 41.5
margin_bottom = 43.0

[node name="title" type="Label" parent="VBoxContainer"]
margin_right = 88.0
margin_bottom = 14.0
text = "King's Journey"

[node name="Start" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 88.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( -281, 20 )
text = "Jouer"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 88.0
margin_bottom = 62.0
text = "Options"

[node name="Stats" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 88.0
margin_bottom = 86.0
text = "Statistiques"

[node name="loginButton" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 88.0
margin_bottom = 110.0
text = "Connexion"

[node name="checkLogin" type="HTTPRequest" parent="VBoxContainer"]

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/loginButton" to="." method="_on_loginButton_pressed"]
[connection signal="request_completed" from="VBoxContainer/checkLogin" to="." method="_on_checkLogin_request_completed"]
